Keyboard v2
Added filters, keyboard in 2 modes; indicator + normal.
Upgraded gradle