@@ -2,6 +2,7 @@ package pl.polsl.blissapp.ui.views.keyboard;
 
 import android.content.Context;
 import android.graphics.Color;
+import android.graphics.PorterDuff;
 import android.graphics.drawable.ColorDrawable;
 import android.os.Bundle;
 import android.util.TypedValue;
@@ -9,13 +10,14 @@ import android.view.Gravity;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
-import android.widget.Button;
 import android.widget.ImageButton;
+import android.widget.ImageView;
 import android.widget.LinearLayout;
 import android.widget.PopupWindow;
 
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
+import androidx.core.content.ContextCompat;
 import androidx.fragment.app.Fragment;
 import androidx.lifecycle.ViewModelProvider;
 
@@ -23,123 +25,237 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import pl.polsl.blissapp.R;
-import pl.polsl.blissapp.data.model.Radical;
-
 import dagger.hilt.android.AndroidEntryPoint;
+import pl.polsl.blissapp.R;
+import pl.polsl.blissapp.data.model.Indicator;
+import pl.polsl.blissapp.data.model.Radical;
+import pl.polsl.blissapp.ui.mapping.DrawableMapper;
 
 @AndroidEntryPoint
-public class BlissKeyboardFragment extends Fragment
-{
+public class BlissKeyboardFragment extends Fragment {
+
     private BlissKeyboardViewModel viewModel;
     private final List<View> radicalButtons = new ArrayList<>();
+    private PopupWindow currentPopupWindow;
+
     private boolean isIndicatorMode = false;
+
+    // Optimizations: Cache these to prevent repetitive lookups
+    private ImageButton indicatorModeButton;
+
+    private static final int VARIANTS_PER_ROW = 6;
 
     @Nullable
     @Override
     public View onCreateView(@NonNull LayoutInflater inflater, @Nullable ViewGroup container, @Nullable Bundle savedInstanceState) {
-        return inflater.inflate(R.layout.fragment_bliss_keyboard, container, false);
+        Fragment parent = getParentFragment();
+        if (parent != null) {
+            viewModel = new ViewModelProvider(parent).get(BlissKeyboardViewModel.class);
+        } else {
+            viewModel = new ViewModelProvider(requireActivity()).get(BlissKeyboardViewModel.class);
+        }
+        return createKeyboardView();
     }
 
     @Override
-    public void onViewCreated(@NonNull View view, @Nullable Bundle savedInstanceState) {
-        super.onViewCreated(view, savedInstanceState);
-        viewModel = new ViewModelProvider(this).get(BlissKeyboardViewModel.class);
-
-        for (KeyUI keyBlueprint : getKeyboardConfiguration()) {
-            View buttonView = view.findViewById(keyBlueprint.viewId);
-            if (buttonView != null) {
-                setupKeyLogic(buttonView, keyBlueprint);
-            }
+    public void onDestroyView() {
+        super.onDestroyView();
+        if (currentPopupWindow != null && currentPopupWindow.isShowing()) {
+            currentPopupWindow.dismiss();
         }
+        currentPopupWindow = null;
     }
 
-    private List<KeyUI> getKeyboardConfiguration() {
+    // --- KEYBOARD UI GENERATION ---
+
+    private View createKeyboardView() {
+        LinearLayout keyboardLayout = new LinearLayout(getContext());
+        keyboardLayout.setLayoutParams(new LinearLayout.LayoutParams(ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.WRAP_CONTENT));
+        keyboardLayout.setOrientation(LinearLayout.VERTICAL);
+        keyboardLayout.setGravity(Gravity.BOTTOM);
+        keyboardLayout.setBackgroundColor(ContextCompat.getColor(getContext(), R.color.keyboard_background));
+        int padding = getResources().getDimensionPixelSize(R.dimen.keyboard_padding);
+        keyboardLayout.setPadding(padding, padding, padding, padding);
+
+        for (List<KeyUI> rowConfig : getKeyboardRows()) {
+            keyboardLayout.addView(createRowView(rowConfig));
+        }
+
+        return keyboardLayout;
+    }
+
+    private View createRowView(List<KeyUI> rowConfig) {
+        LinearLayout rowLayout = new LinearLayout(getContext());
+        rowLayout.setLayoutParams(new LinearLayout.LayoutParams(ViewGroup.LayoutParams.MATCH_PARENT, ViewGroup.LayoutParams.WRAP_CONTENT));
+        rowLayout.setOrientation(LinearLayout.HORIZONTAL);
+        rowLayout.setGravity(Gravity.CENTER_HORIZONTAL);
+
+        for (KeyUI keyConfig : rowConfig) {
+            View keyView = createKeyView(keyConfig);
+            setupKeyLogic(keyView, keyConfig);
+            rowLayout.addView(keyView);
+        }
+        return rowLayout;
+    }
+
+    private View createKeyView(KeyUI keyConfig) {
+        int keyHeight = getResources().getDimensionPixelSize(R.dimen.keyboard_key_height);
+        int keyMargin = getResources().getDimensionPixelSize(R.dimen.keyboard_key_margin);
+        int keyPadding = getResources().getDimensionPixelSize(R.dimen.keyboard_key_padding);
+
+        if (keyConfig instanceof BlissKeyUI) {
+            ImageButton imageButton = new ImageButton(getContext());
+            LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(0, keyHeight, keyConfig.weight);
+            params.setMargins(keyMargin, keyMargin, keyMargin, keyMargin);
+            imageButton.setLayoutParams(params);
+
+            imageButton.setImageResource(DrawableMapper.getDrawableRes(((BlissKeyUI) keyConfig).baseRadical));
+            imageButton.setContentDescription(((BlissKeyUI) keyConfig).baseRadical.name());
+            imageButton.setBackgroundResource(R.drawable.key_background);
+            imageButton.setScaleType(ImageView.ScaleType.FIT_CENTER);
+            imageButton.setPadding(keyPadding, keyPadding, keyPadding, keyPadding);
+
+            radicalButtons.add(imageButton);
+            return imageButton;
+
+        } else if (keyConfig instanceof ControlKeyUI) {
+            ControlKey action = ((ControlKeyUI) keyConfig).action;
+            ImageButton imageButton = new ImageButton(getContext());
+            LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(0, keyHeight, keyConfig.weight);
+            params.setMargins(keyMargin, keyMargin, keyMargin, keyMargin);
+            imageButton.setLayoutParams(params);
+            imageButton.setBackgroundResource(R.drawable.key_background);
+            imageButton.setContentDescription(action.name());
+            imageButton.setScaleType(ImageView.ScaleType.FIT_CENTER);
+            imageButton.setPadding(keyPadding, keyPadding, keyPadding, keyPadding);
+
+            switch (action) {
+                case POP_SYMBOL:
+                    imageButton.setImageResource(android.R.drawable.ic_input_delete);
+                    imageButton.setColorFilter(ContextCompat.getColor(getContext(), R.color.black), PorterDuff.Mode.SRC_ATOP);
+                    break;
+                case INDICATOR_MODE:
+                    imageButton.setImageResource(R.drawable.indicator_placeholder);
+                    imageButton.setBackgroundResource(R.drawable.indicator_key_background);
+                    indicatorModeButton = imageButton;
+                    break;
+                case PUSH_SYMBOL:
+                    imageButton.setImageResource(android.R.drawable.ic_menu_add);
+                    break;
+                case ENTER:
+                    imageButton.setImageResource(android.R.drawable.ic_menu_send);
+                    break;
+            }
+            return imageButton;
+        }
+        throw new IllegalArgumentException("Unknown KeyUI type");
+    }
+
+    // --- KEYBOARD CONFIGURATION DSL ---
+
+    private BlissKeyUI key(Radical r) { return new BlissKeyUI(r, null, 1f); }
+    private BlissKeyUI key(Radical r, Indicator i) { return new BlissKeyUI(r, i, 1f); }
+    private ControlKeyUI ctrl(ControlKey c, float weight) { return new ControlKeyUI(c, weight); }
+
+    private List<List<KeyUI>> getKeyboardRows() {
         return Arrays.asList(
-                // --- ROW 1 ---
-                new BlissKeyUI(R.id.key_arc, Radical.ARC, List.of(Radical.ARC_NORTH, Radical.ARC_SOUTH, Radical.ARC_EAST, Radical.ARC_WEST)),
-                new BlissKeyUI(R.id.key_arrow, Radical.ARROW, List.of(Radical.ARROW_NORTH, Radical.ARROW_SOUTH)),
-                new BlissKeyUI(R.id.key_building, Radical.BUILDING, null),
-                new BlissKeyUI(R.id.key_cross_hatches, Radical.CROSSHATCH, List.of(Radical.CROSSHATCH_STRAIGHT, Radical.CROSSHATCH_PITCHED)),
-                new BlissKeyUI(R.id.key_pointer, Radical.POINTER, List.of(Radical.POINTER_NORTH, Radical.POINTER_SOUTH)),
-                new BlissKeyUI(R.id.key_punctuation, Radical.PUNCTUATION, null),
-                new BlissKeyUI(R.id.key_digit, Radical.DIGIT, null),
-                new ControlKeyUI(R.id.key_backspace, ControlKey.POP_SYMBOL),
-
-                // --- ROW 2 ---
-                new BlissKeyUI(R.id.key_ear, Radical.EAR, null),
-                new BlissKeyUI(R.id.key_heart, Radical.HEART, null),
-                new BlissKeyUI(R.id.key_open_rectangle, Radical.OPEN_RECTANGLE, List.of(Radical.OPEN_RECTANGLE_NORTH, Radical.OPEN_RECTANGLE_SOUTH_VERTICAL)),
-                new BlissKeyUI(R.id.key_rectangle, Radical.RECTANGLE, Radical.RECTANGLE_LARGE, List.of(Radical.RECTANGLE_SMALL)), // Example Indicator!
-                new BlissKeyUI(R.id.key_open_square, Radical.OPEN_SQUARE, List.of(Radical.OPEN_SQUARE_LARGE_NORTH)),
-                new BlissKeyUI(R.id.key_square, Radical.SQUARE, Radical.SQUARE_LARGE, List.of(Radical.SQUARE_SMALL)), // Example Indicator!
-                new BlissKeyUI(R.id.key_dot, Radical.DOT, null),
-                new BlissKeyUI(R.id.key_small_circle, Radical.CIRCLE_SMALL, null),
-                new BlissKeyUI(R.id.key_wheel, Radical.WHEEL, null),
-
-                // --- ROW 3 ---
-                new BlissKeyUI(R.id.key_acute_angle, Radical.ACUTE_ANGLE, List.of(Radical.ACUTE_ANGLE_LARGE_NORTH)),
-                new BlissKeyUI(R.id.key_acute_triangle, Radical.ACUTE_TRIANGLE, List.of(Radical.ACUTE_TRIANGLE_LARGE_NORTH)),
-                new BlissKeyUI(R.id.key_right_angle, Radical.RIGHT_ANGLE, List.of(Radical.RIGHT_ANGLE_LARGE_NORTH)),
-                new BlissKeyUI(R.id.key_right_triangle, Radical.RIGHT_TRIANGLE, List.of(Radical.RIGHT_TRIANGLE_LARGE_NORTH)),
-                new BlissKeyUI(R.id.key_wave, Radical.WAVY_LINE, List.of(Radical.WAVY_LINE_HORIZONTAL, Radical.WAVY_LINE_VERTICAL)),
-                new BlissKeyUI(R.id.key_horizontal_line, Radical.HORIZONTAL_LINE, Radical.HORIZONTAL_LINE_LARGE, List.of(Radical.HORIZONTAL_LINE_SMALL)), // Indicator
-                new BlissKeyUI(R.id.key_vertical_line, Radical.VERTICAL_LINE, Radical.VERTICAL_LINE_LARGE, List.of(Radical.VERTICAL_LINE_SMALL)), // Indicator
-                new BlissKeyUI(R.id.key_diagonal_line, Radical.DIAGONAL_LINE, List.of(Radical.DIAGONAL_LINE_LARGE_NORTHEAST)),
-
-                // --- ROW 4 (Controls) ---
-                //new ControlKeyUI(R.id.key_shift, ControlKey.INDICATOR_MODE),
-                new ControlKeyUI(R.id.key_space, ControlKey.PUSH_SYMBOL),
-                new ControlKeyUI(R.id.key_enter, ControlKey.ENTER)
+                // ROW 1
+                Arrays.asList(
+                        key(Radical.SEMICIRCLE),
+                        key(Radical.ARC),
+                        key(Radical.ARROW),
+                        key(Radical.BUILDING),
+                        key(Radical.CROSSHATCH),
+                        key(Radical.CROSS),
+                        key(Radical.POINTER),
+                        ctrl(ControlKey.POP_SYMBOL, 1.5f)
+                ),
+                // ROW 2
+                Arrays.asList(
+                        key(Radical.EAR),
+                        key(Radical.HEART),
+                        key(Radical.OPEN_RECTANGLE),
+                        key(Radical.RECTANGLE, Indicator.PLURAL),
+                        key(Radical.OPEN_SQUARE),
+                        key(Radical.SQUARE, Indicator.THING),
+                        key(Radical.DOT, Indicator.DOT),
+                        key(Radical.CIRCLE),
+                        key(Radical.WHEEL)
+                ),
+                // ROW 3
+                Arrays.asList(
+                        key(Radical.ACUTE_ANGLE),
+                        key(Radical.ACUTE_TRIANGLE),
+                        key(Radical.RIGHT_ANGLE),
+                        key(Radical.RIGHT_TRIANGLE),
+                        key(Radical.PIN),
+                        key(Radical.WAVY_LINE),
+                        key(Radical.HORIZONTAL_LINE, Indicator.PAST_ACTION),
+                        key(Radical.VERTICAL_LINE, Indicator.FUTURE_ACTION),
+                        key(Radical.DIAGONAL_LINE)
+                ),
+                // ROW 4 (Controls)
+                Arrays.asList(
+                        ctrl(ControlKey.INDICATOR_MODE, 1.5f),
+                        ctrl(ControlKey.PUSH_SYMBOL, 4f),
+                        ctrl(ControlKey.ENTER, 1.5f)
+                )
         );
     }
+
+    // --- EVENT HANDLING LOGIC ---
 
     private void setupKeyLogic(View buttonView, KeyUI blueprint) {
         buttonView.setTag(blueprint);
 
         if (blueprint instanceof BlissKeyUI blissKey) {
-            radicalButtons.add(buttonView);
+            final List<Radical> variants = Radical.getChildren(blissKey.baseRadical);
 
             // Standard Click
             buttonView.setOnClickListener(v -> {
-                Radical radicalToSend = (isIndicatorMode && blissKey.isIndicator())
-                        ? blissKey.indicatorRadical
-                        : blissKey.baseRadical;
-                viewModel.onRadicalKeyTapped(radicalToSend);
+                if (isIndicatorMode) {
+                    if (blissKey.indicator != null) { // Direct null check clears IDE warning
+                        viewModel.onIndicatorKeyTapped(blissKey.indicator);
 
-                if(isIndicatorMode){
-                    toggleIndicatorMode((Button) buttonView);
+                        // Turn indicator mode off automatically using the cached button
+                        if (indicatorModeButton != null && isIndicatorMode) {
+                            toggleIndicatorMode(indicatorModeButton);
+                        }
+                    }
+                } else {
+                    viewModel.onRadicalKeyTapped(blissKey.baseRadical);
                 }
             });
 
-            // Long Click Variants (Disabled if Shift/Indicator mode is ON)
-            if (blissKey.hasVariants()) {
+            // Long Click Variants (Disabled if Indicator mode is ON)
+            if (!variants.isEmpty()) {
                 buttonView.setOnLongClickListener(v -> {
                     if (!isIndicatorMode) {
-                        showVariantsPopup(buttonView, blissKey.variants);
+                        showVariantsPopup(buttonView, variants);
                         return true;
                     }
                     return false;
                 });
+            } else {
+                buttonView.setLongClickable(false);
             }
         } else if (blueprint instanceof ControlKeyUI controlKey) {
-
             buttonView.setOnClickListener(v -> {
                 if (controlKey.action == ControlKey.INDICATOR_MODE) {
-                    toggleIndicatorMode((Button) buttonView);
+                    toggleIndicatorMode((ImageButton) buttonView);
                 } else {
                     viewModel.onControlKeyTapped(controlKey.action);
                 }
             });
+            buttonView.setLongClickable(false);
         }
     }
 
-    private void toggleIndicatorMode(Button shiftButton) {
+    private void toggleIndicatorMode(ImageButton shiftButton) {
         isIndicatorMode = !isIndicatorMode;
 
         // Visual toggle for the SHIFT button
-        shiftButton.setBackgroundColor(isIndicatorMode ? Color.LTGRAY : Color.TRANSPARENT);
-        shiftButton.setText(isIndicatorMode ? "SHIFT (ON)" : "SHIFT");
+        shiftButton.setActivated(isIndicatorMode);
 
         // Loop through all Radical buttons and update their appearance
         for (View btn : radicalButtons) {
@@ -147,19 +263,17 @@ public class BlissKeyboardFragment extends Fragment
             ImageButton imgBtn = (ImageButton) btn;
 
             if (isIndicatorMode) {
-                if (blueprint.isIndicator()) {
-                    // It is an indicator key: Swap the image to the indicator version
-                    imgBtn.setImageResource(blueprint.indicatorRadical.getDrawableRes());
+                if (blueprint.indicator != null) { // Direct null check clears IDE warning
+                    imgBtn.setImageResource(DrawableMapper.getDrawableRes(blueprint.indicator));
                     imgBtn.setAlpha(1.0f);
                     imgBtn.setEnabled(true);
                 } else {
-                    // Not an indicator key: Dim and disable it
-                    imgBtn.setAlpha(0.3f);
+                    // Disable keys that have a NULL indicator
+                    imgBtn.setAlpha(0.25f);
                     imgBtn.setEnabled(false);
                 }
             } else {
-                // Shift is OFF: Revert to normal base images
-                imgBtn.setImageResource(blueprint.baseRadical.getDrawableRes());
+                imgBtn.setImageResource(DrawableMapper.getDrawableRes(blueprint.baseRadical));
                 imgBtn.setAlpha(1.0f);
                 imgBtn.setEnabled(true);
             }
@@ -168,37 +282,56 @@ public class BlissKeyboardFragment extends Fragment
 
     private void showVariantsPopup(View anchorView, List<Radical> variants) {
         Context context = getContext();
-        if (context == null) {
-            return;
+        if (context == null) return;
+
+        int popupOffset = getResources().getDimensionPixelSize(R.dimen.keyboard_popup_offset);
+
+        ViewGroup root = (ViewGroup) anchorView.getRootView();
+        View popupView = LayoutInflater.from(context).inflate(R.layout.popup_bliss_variants, root, false);
+        LinearLayout container = popupView.findViewById(R.id.popup_container);
+
+        currentPopupWindow = new PopupWindow(popupView, ViewGroup.LayoutParams.WRAP_CONTENT, ViewGroup.LayoutParams.WRAP_CONTENT, true);
+        currentPopupWindow.setBackgroundDrawable(new ColorDrawable(Color.TRANSPARENT));
+
+        LinearLayout currentRow = null;
+        for (int i = 0; i < variants.size(); i++) {
+            if (i % VARIANTS_PER_ROW == 0) {
+                currentRow = new LinearLayout(context);
+                currentRow.setOrientation(LinearLayout.HORIZONTAL);
+                container.addView(currentRow);
+            }
+            ImageButton btn = getVariantButton(context, variants.get(i), currentPopupWindow);
+            currentRow.addView(btn);
         }
-        LinearLayout container = (LinearLayout) LayoutInflater.from(context).inflate(R.layout.popup_bliss_variants, null);
 
-        PopupWindow popupWindow = new PopupWindow(container, ViewGroup.LayoutParams.WRAP_CONTENT, ViewGroup.LayoutParams.WRAP_CONTENT, true);
-        popupWindow.setBackgroundDrawable(new ColorDrawable(Color.TRANSPARENT));
+        // Measure the popup and display it
+        popupView.measure(View.MeasureSpec.makeMeasureSpec(0, View.MeasureSpec.UNSPECIFIED),
+                View.MeasureSpec.makeMeasureSpec(0, View.MeasureSpec.UNSPECIFIED));
+        int popupHeight = popupView.getMeasuredHeight();
+        int popupWidth = popupView.getMeasuredWidth();
 
-        // Add the variant buttons dynamically
-        for (Radical variant : variants) {
-            ImageButton btn = getImageButton(context, variant, popupWindow);
-            container.addView(btn);
-        }
+        int xOffset = (anchorView.getWidth() - popupWidth) / 2;
+        int yOffset = -anchorView.getHeight() - popupHeight - popupOffset;
 
-        // Show the popup anchored above the button that was long-pressed
-        popupWindow.showAsDropDown(anchorView, 0, -150, Gravity.CENTER_HORIZONTAL);
+        currentPopupWindow.showAsDropDown(anchorView, xOffset, yOffset);
     }
 
     @NonNull
-    private ImageButton getImageButton(@NonNull Context context, Radical variant, PopupWindow popupWindow) {
+    private ImageButton getVariantButton(@NonNull Context context, Radical variant, PopupWindow popupWindow) {
+        int keyHeight = getResources().getDimensionPixelSize(R.dimen.keyboard_key_height);
+        int keyMargin = getResources().getDimensionPixelSize(R.dimen.keyboard_key_margin);
+        int keyPadding = getResources().getDimensionPixelSize(R.dimen.keyboard_key_padding);
+
         ImageButton btn = new ImageButton(context);
-        LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(120, 120);
-        params.setMargins(8, 0, 8, 0);
+        LinearLayout.LayoutParams params = new LinearLayout.LayoutParams(keyHeight, keyHeight);
+        params.setMargins(keyMargin, 0, keyMargin, 0);
         btn.setLayoutParams(params);
 
-        btn.setImageResource(variant.getDrawableRes());
-        TypedValue outValue = new TypedValue();
-        context.getTheme().resolveAttribute(android.R.attr.selectableItemBackground, outValue, true);
-        btn.setBackgroundResource(outValue.resourceId);
-        btn.setScaleType(ImageButton.ScaleType.FIT_CENTER);
-        btn.setPadding(16, 16, 16, 16);
+        btn.setImageResource(DrawableMapper.getDrawableRes(variant));
+        btn.setContentDescription(variant.name());
+        btn.setBackgroundResource(R.drawable.key_background);
+        btn.setScaleType(ImageView.ScaleType.FIT_CENTER);
+        btn.setPadding(keyPadding, keyPadding, keyPadding, keyPadding);
 
         btn.setOnClickListener(v -> {
             viewModel.onRadicalKeyTapped(variant);
